--- a/Week_1/day_5-weekly/src/App.css
+++ b/Week_1/day_5-weekly/src/App.css
@@ -1,5 +1,4 @@
 .App {
-    text-align: center;
     background-color: black;
 }
 
@@ -11,4 +10,17 @@
     left: auto !important;
     right: 0 !important;
     background: black !important;
+}
+
+.dropdown-item {
+    color: white !important;
+}
+
+.dropdown-item:hover {
+    color: black !important;
+}
+
+.carouselTitle {
+    color: white;
+    font-size: 1.4em;
 }
