--- a/Week_1/day_5-weekly/src/App.css
+++ b/Week_1/day_5-weekly/src/App.css
@@ -24,3 +24,9 @@
     color: white;
     font-size: 1.4em;
 }
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
