--- a/Week_1/day_5-weekly/src/index.css
+++ b/Week_1/day_5-weekly/src/index.css
@@ -1,3 +1,4 @@
+html,
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
+  width: 100%;
+  max-height: 100vh;
+  height: 100%;
 }
 
 code {
