--- a/Week_2/day_1/src/App.css
+++ b/Week_2/day_1/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+.bgCard {
+  background: rgb(235,229,207);
+  background: linear-gradient(0deg, rgba(235,229,207,1) 59%, rgba(255,255,255,1) 100%);
+}
+
+.learnMore {
+  font-size: smaller;
+  font-weight: 600;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 1px solid black;
+}
