--- a/Week_2/day_2/src/App.css
+++ b/Week_2/day_2/src/App.css
@@ -32,14 +32,15 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
 .bgCard {
-  background: rgb(235,229,207);
-  background: linear-gradient(0deg, rgba(235,229,207,1) 59%, rgba(255,255,255,1) 100%);
+  background: rgb(235, 229, 207);
+  background: linear-gradient(0deg, rgba(235, 229, 207, 1) 59%, rgba(255, 255, 255, 1) 100%);
 }
 
 .learnMore {
@@ -48,4 +49,8 @@
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   border-bottom: 1px solid black;
+}
+
+#commentImage {
+  width: 100%;
 }
