--- a/Week_2/day_5-weekly/src/App.css
+++ b/Week_2/day_5-weekly/src/App.css
@@ -1,3 +1,8 @@
+html,
+body {
+  background-color: rgb(255, 233, 193);
+}
+
 .App {
   text-align: center;
 }
@@ -13,25 +18,20 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
+}
+
+.card {
+  background-color: rgb(64, 64, 64) !important;
+  color: white !important;
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
