--- a/Week_3/day_3/src/App.css
+++ b/Week_3/day_3/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+html,
+body {
+    height: 100%;
+    width: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
+    background-image: url('https://img.freepik.com/free-photo/beautiful-shining-stars-night-sky_181624-622.jpg?w=740&t=st=1681397520~exp=1681398120~hmac=ce5f357e7a55da2774118bbb38e0a18805e13c1753cfa414370361a0340d73fa');
+    background-repeat: repeat-y;
+    background-size: cover;
+    padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-title,
+a {
+    color: rgb(0, 0, 92);
+    text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2,
+h3 {
+    color: rgb(0, 0, 92);
+    text-align: center;
+    font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.btn-dark {
+    background-color: rgb(0, 0, 92) !important;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
