--- a/Week_3/day_5-Weekly/src/App.css
+++ b/Week_3/day_5-Weekly/src/App.css
@@ -182,7 +182,7 @@ ul {
 }
 
 .imgLinks a p,
-.albumCard a.artistLink {
+a.artistLink {
   padding-top: 5px;
   font-size: 12px;
   color: white;
@@ -190,7 +190,7 @@ ul {
 }
 
 
-.albumCard a.albumLink {
+a.albumLink {
   padding-top: 8px;
   font-size: 18px;
   color: white;
@@ -198,7 +198,7 @@ ul {
   text-decoration: none;
 }
 
-.albumCard a:hover {
+a:hover {
   color: rgb(138, 138, 138) !important;
 }
 
